dataset tvsum done

--- a/notebooks/summe.ipynb
+++ b/notebooks/summe.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -69,151 +69,126 @@
       "video 1 comparison\n",
       "video name gt b'Air_Force_One'\n",
       "video name mine Air_Force_One\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 2 comparison\n",
       "video name gt b'Base jumping'\n",
       "video name mine Base jumping\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 3 comparison\n",
       "video name gt b'Bearpark_climbing'\n",
       "video name mine Bearpark_climbing\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 4 comparison\n",
       "video name gt b'Bike Polo'\n",
       "video name mine Bike Polo\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 5 comparison\n",
       "video name gt b'Bus_in_Rock_Tunnel'\n",
       "video name mine Bus_in_Rock_Tunnel\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 6 comparison\n",
       "video name gt b'Car_railcrossing'\n",
       "video name mine Car_railcrossing\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 7 comparison\n",
       "video name gt b'Cockpit_Landing'\n",
       "video name mine Cockpit_Landing\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 8 comparison\n",
       "video name gt b'Cooking'\n",
       "video name mine Cooking\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 9 comparison\n",
       "video name gt b'Eiffel Tower'\n",
       "video name mine Eiffel Tower\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 10 comparison\n",
       "video name gt b'Excavators river crossing'\n",
       "video name mine Excavators river crossing\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 11 comparison\n",
       "video name gt b'Fire Domino'\n",
       "video name mine Fire Domino\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 12 comparison\n",
       "video name gt b'Jumps'\n",
       "video name mine Jumps\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 13 comparison\n",
       "video name gt b'Kids_playing_in_leaves'\n",
       "video name mine Kids_playing_in_leaves\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 14 comparison\n",
       "video name gt b'Notre_Dame'\n",
       "video name mine Notre_Dame\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 15 comparison\n",
       "video name gt b'Paintball'\n",
       "video name mine Paintball\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 16 comparison\n",
       "video name gt b'Playing_on_water_slide'\n",
       "video name mine Playing_on_water_slide\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 17 comparison\n",
       "video name gt b'Saving dolphines'\n",
       "video name mine Saving dolphines\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 18 comparison\n",
       "video name gt b'Scuba'\n",
       "video name mine Scuba\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 19 comparison\n",
       "video name gt b'St Maarten Landing'\n",
       "video name mine St Maarten Landing\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 20 comparison\n",
       "video name gt b'Statue of Liberty'\n",
       "video name mine Statue of Liberty\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 21 comparison\n",
       "video name gt b'Uncut_Evening_Flight'\n",
       "video name mine Uncut_Evening_Flight\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 22 comparison\n",
       "video name gt b'Valparaiso_Downhill'\n",
       "video name mine Valparaiso_Downhill\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 23 comparison\n",
       "video name gt b'car_over_camera'\n",
       "video name mine car_over_camera\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 24 comparison\n",
       "video name gt b'paluma_jump'\n",
       "video name mine paluma_jump\n",
-      "\n",
       "Everything is perfect\n",
       "\n",
       "video 25 comparison\n",
       "video name gt b'playing_ball'\n",
       "video name mine playing_ball\n",
-      "\n",
       "Everything is perfect\n",
       "\n"
      ]
@@ -283,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 960,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -297,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1018,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1019,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1020,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +347,7 @@
        "        2.81268102e-03, 8.94312747e-03, 0.00000000e+00]])"
       ]
      },
-     "execution_count": 1020,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1021,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +387,7 @@
        "        0.55294669]])"
       ]
      },
-     "execution_count": 1021,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1022,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +481,7 @@
        "       0.        , 0.        , 0.        , 0.        , 0.        ])"
       ]
      },
-     "execution_count": 1022,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1023,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +568,7 @@
        "       0.        , 0.        , 0.        , 0.        , 0.        ])"
       ]
      },
-     "execution_count": 1023,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1024,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +623,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 1024,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1025,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +657,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 1025,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1026,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1027,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1028,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +762,7 @@
        "       [4343, 4493]])"
       ]
      },
-     "execution_count": 1028,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1029,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +819,7 @@
        "       [4290, 4493]])"
       ]
      },
-     "execution_count": 1029,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1030,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +856,7 @@
        "        90,  57,  57, 151])"
       ]
      },
-     "execution_count": 1030,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1031,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +886,7 @@
        "        60,  45,  30, 204])"
       ]
      },
-     "execution_count": 1031,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1032,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +948,7 @@
        "       4455, 4470, 4485])"
       ]
      },
-     "execution_count": 1032,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1033,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1003,7 @@
        "       4455, 4470, 4485])"
       ]
      },
-     "execution_count": 1033,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1034,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1038,7 @@
        "array(300)"
       ]
      },
-     "execution_count": 1034,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1035,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1066,7 @@
        "array(300)"
       ]
      },
-     "execution_count": 1035,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,10 +1092,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1132,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 651,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 652,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1136,7 @@
        "dict_keys(['__header__', '__version__', '__globals__', 'all_userIDs', 'segments', 'nFrames', 'video_duration', 'FPS', 'gt_score', 'user_score'])"
       ]
      },
-     "execution_count": 653,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 654,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1157,7 @@
        "array([[25]], dtype=uint8)"
       ]
      },
-     "execution_count": 654,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1177,7 @@
        "array([[25]], dtype=uint8)"
       ]
      },
-     "execution_count": 655,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 656,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1197,7 @@
        "array([[179.772]])"
       ]
      },
-     "execution_count": 656,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 657,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1236,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 657,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 658,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1257,7 @@
        "(4494, 15)"
       ]
      },
-     "execution_count": 658,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 659,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 660,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1309,13 +1286,33 @@
        "(15, 4494)"
       ]
      },
-     "execution_count": 660,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "goundt.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(300,)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(goundt[:, ::15], axis=0).shape"
    ]
   },
   {
