the dataset can be donwloaded

--- a/notebooks/summe.ipynb
+++ b/notebooks/summe.ipynb
@@ -1208,47 +1208,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.]])"
+       "0.8666666666666667"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[\"gt_score\"].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4494, 1)"
+      ]
+     },
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#the averaged score\n",
-    "mat[\"gt_score\"][:20]"
+    "mat[\"gt_score\"].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1257,13 +1258,33 @@
        "(4494, 15)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mat[\"user_score\"][:,].shape"
+    "mat[\"user_score\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.933333333333333"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(mat[\"user_score\"], axis=1).max()"
    ]
   },
   {
