--- a/notebooks/tvsum.ipynb
+++ b/notebooks/tvsum.ipynb
@@ -15,8 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_info = \"/data/shuaman/video_summarization/datasets/raw_datasets/TvSum/ydata-tvsum50-v1_1/data/ydata-tvsum50-info.tsv\"\n",
-    "path_ant = \"/data/shuaman/video_summarization/datasets/raw_datasets/TvSum/ydata-tvsum50-v1_1/data/ydata-tvsum50-anno.tsv\""
+    "path_info = \"/data/shuaman/video_summarization/datasets/raw_datasets/TVsum/ydata-tvsum50-v1_1/data/ydata-tvsum50-info.tsv\"\n",
+    "path_ant = \"/data/shuaman/video_summarization/datasets/raw_datasets/TVsum/ydata-tvsum50-v1_1/data/ydata-tvsum50-anno.tsv\""
    ]
   },
   {
@@ -429,12 +429,112 @@
       "video 25 comparison\n",
       "video name mine PJrm840pAUI\n",
       "Everything is perfect\n",
+      "\n",
+      "video 26 comparison\n",
+      "video name mine 91IHQYk1IQM\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 27 comparison\n",
+      "video name mine RBCABdttQmI\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 28 comparison\n",
+      "video name mine z_6gVvQb2d0\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 29 comparison\n",
+      "video name mine fWutDQy1nnY\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 30 comparison\n",
+      "video name mine 4wU_LUjG5Ic\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 31 comparison\n",
+      "video name mine VuWGsYPqAX8\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 32 comparison\n",
+      "video name mine JKpqYvAdIsw\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 33 comparison\n",
+      "video name mine xmEERLqJ2kU\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 34 comparison\n",
+      "video name mine byxOvuiIJV0\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 35 comparison\n",
+      "video name mine _xMr-HKMfVA\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 36 comparison\n",
+      "video name mine WxtbjNsCQ8A\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 37 comparison\n",
+      "video name mine uGu_10sucQo\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 38 comparison\n",
+      "video name mine EE-bNr36nyA\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 39 comparison\n",
+      "video name mine Se3oxnaPsz0\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 40 comparison\n",
+      "video name mine oDXZc0tZe04\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 41 comparison\n",
+      "video name mine qqR6AEXwxoQ\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 42 comparison\n",
+      "video name mine EYqVtI9YWJA\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 43 comparison\n",
+      "video name mine eQu1rNs0an0\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 44 comparison\n",
+      "video name mine JgHubY5Vw3Y\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 45 comparison\n",
+      "video name mine iVt07TCkFM0\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 46 comparison\n",
+      "video name mine E11zDS9XGzg\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 47 comparison\n",
+      "video name mine NyBmCxDoHJU\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 48 comparison\n",
+      "video name mine kLxoNp-UchI\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 49 comparison\n",
+      "video name mine jcoYJXDG9sw\n",
+      "Everything is perfect\n",
+      "\n",
+      "video 50 comparison\n",
+      "video name mine -esJrBWj2d8\n",
+      "Everything is perfect\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "for i in range(0,25):\n",
+    "for i in range(0,50):\n",
     "    video_gt = data_all_tvsum[\"video_\" + str(i+1)]\n",
     "    video_mine = data_all_tvsum_mine[\"video_\" + str(i+1)]\n",
     "    \n",
@@ -1301,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1422,7 @@
        "       146,  72,  90, 269, 268, 997])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,6 +1430,26 @@
    "source": [
     "print(\"n frame per seg gt\", video_gt['n_frame_per_seg'][...].shape)\n",
     "video_gt['n_frame_per_seg'][...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "149.25352112676057"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "video_gt['n_frame_per_seg'][...].mean()"
    ]
   },
   {
