dataset done partially

--- a/notebooks/summe.ipynb
+++ b/notebooks/summe.ipynb
@@ -2,7 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 freeze | wc -l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list(data_all_summe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -68,127 +103,127 @@
      "text": [
       "video 1 comparison\n",
       "video name gt b'Air_Force_One'\n",
-      "video name mine Air_Force_One\n",
+      "video name mine b'Air_Force_One'\n",
       "Everything is perfect\n",
       "\n",
       "video 2 comparison\n",
       "video name gt b'Base jumping'\n",
-      "video name mine Base jumping\n",
+      "video name mine b'Base jumping'\n",
       "Everything is perfect\n",
       "\n",
       "video 3 comparison\n",
       "video name gt b'Bearpark_climbing'\n",
-      "video name mine Bearpark_climbing\n",
+      "video name mine b'Bearpark_climbing'\n",
       "Everything is perfect\n",
       "\n",
       "video 4 comparison\n",
       "video name gt b'Bike Polo'\n",
-      "video name mine Bike Polo\n",
+      "video name mine b'Bike Polo'\n",
       "Everything is perfect\n",
       "\n",
       "video 5 comparison\n",
       "video name gt b'Bus_in_Rock_Tunnel'\n",
-      "video name mine Bus_in_Rock_Tunnel\n",
+      "video name mine b'Bus_in_Rock_Tunnel'\n",
       "Everything is perfect\n",
       "\n",
       "video 6 comparison\n",
       "video name gt b'Car_railcrossing'\n",
-      "video name mine Car_railcrossing\n",
+      "video name mine b'Car_railcrossing'\n",
       "Everything is perfect\n",
       "\n",
       "video 7 comparison\n",
       "video name gt b'Cockpit_Landing'\n",
-      "video name mine Cockpit_Landing\n",
+      "video name mine b'Cockpit_Landing'\n",
       "Everything is perfect\n",
       "\n",
       "video 8 comparison\n",
       "video name gt b'Cooking'\n",
-      "video name mine Cooking\n",
+      "video name mine b'Cooking'\n",
       "Everything is perfect\n",
       "\n",
       "video 9 comparison\n",
       "video name gt b'Eiffel Tower'\n",
-      "video name mine Eiffel Tower\n",
+      "video name mine b'Eiffel Tower'\n",
       "Everything is perfect\n",
       "\n",
       "video 10 comparison\n",
       "video name gt b'Excavators river crossing'\n",
-      "video name mine Excavators river crossing\n",
+      "video name mine b'Excavators river crossing'\n",
       "Everything is perfect\n",
       "\n",
       "video 11 comparison\n",
       "video name gt b'Fire Domino'\n",
-      "video name mine Fire Domino\n",
+      "video name mine b'Fire Domino'\n",
       "Everything is perfect\n",
       "\n",
       "video 12 comparison\n",
       "video name gt b'Jumps'\n",
-      "video name mine Jumps\n",
+      "video name mine b'Jumps'\n",
       "Everything is perfect\n",
       "\n",
       "video 13 comparison\n",
       "video name gt b'Kids_playing_in_leaves'\n",
-      "video name mine Kids_playing_in_leaves\n",
+      "video name mine b'Kids_playing_in_leaves'\n",
       "Everything is perfect\n",
       "\n",
       "video 14 comparison\n",
       "video name gt b'Notre_Dame'\n",
-      "video name mine Notre_Dame\n",
+      "video name mine b'Notre_Dame'\n",
       "Everything is perfect\n",
       "\n",
       "video 15 comparison\n",
       "video name gt b'Paintball'\n",
-      "video name mine Paintball\n",
+      "video name mine b'Paintball'\n",
       "Everything is perfect\n",
       "\n",
       "video 16 comparison\n",
       "video name gt b'Playing_on_water_slide'\n",
-      "video name mine Playing_on_water_slide\n",
+      "video name mine b'Playing_on_water_slide'\n",
       "Everything is perfect\n",
       "\n",
       "video 17 comparison\n",
       "video name gt b'Saving dolphines'\n",
-      "video name mine Saving dolphines\n",
+      "video name mine b'Saving dolphines'\n",
       "Everything is perfect\n",
       "\n",
       "video 18 comparison\n",
       "video name gt b'Scuba'\n",
-      "video name mine Scuba\n",
+      "video name mine b'Scuba'\n",
       "Everything is perfect\n",
       "\n",
       "video 19 comparison\n",
       "video name gt b'St Maarten Landing'\n",
-      "video name mine St Maarten Landing\n",
+      "video name mine b'St Maarten Landing'\n",
       "Everything is perfect\n",
       "\n",
       "video 20 comparison\n",
       "video name gt b'Statue of Liberty'\n",
-      "video name mine Statue of Liberty\n",
+      "video name mine b'Statue of Liberty'\n",
       "Everything is perfect\n",
       "\n",
       "video 21 comparison\n",
       "video name gt b'Uncut_Evening_Flight'\n",
-      "video name mine Uncut_Evening_Flight\n",
+      "video name mine b'Uncut_Evening_Flight'\n",
       "Everything is perfect\n",
       "\n",
       "video 22 comparison\n",
       "video name gt b'Valparaiso_Downhill'\n",
-      "video name mine Valparaiso_Downhill\n",
+      "video name mine b'Valparaiso_Downhill'\n",
       "Everything is perfect\n",
       "\n",
       "video 23 comparison\n",
       "video name gt b'car_over_camera'\n",
-      "video name mine car_over_camera\n",
+      "video name mine b'car_over_camera'\n",
       "Everything is perfect\n",
       "\n",
       "video 24 comparison\n",
       "video name gt b'paluma_jump'\n",
-      "video name mine paluma_jump\n",
+      "video name mine b'paluma_jump'\n",
       "Everything is perfect\n",
       "\n",
       "video 25 comparison\n",
       "video name gt b'playing_ball'\n",
-      "video name mine playing_ball\n",
+      "video name mine b'playing_ball'\n",
       "Everything is perfect\n",
       "\n"
      ]
@@ -272,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +334,7 @@
      "output_type": "stream",
      "text": [
       "video name gt b'Air_Force_One'\n",
-      "video name mine Air_Force_One\n",
+      "video name mine b'Air_Force_One'\n",
       "\n"
      ]
     }
@@ -308,6 +343,26 @@
     "    print(\"video name gt\", video_gt['video_name'][...])\n",
     "    print(\"video name mine\", video_mine['video_name'][...])\n",
     "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"b'Air_Force_One'dasdas\""
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(video_mine['video_name'][...]) + \"dasdas\""
    ]
   },
   {
@@ -1536,9 +1591,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "msva_kernel",
+   "display_name": "vsm_kernel",
    "language": "python",
-   "name": "msva_kernel"
+   "name": "vsm_kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1550,7 +1605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
