--- a/notebooks/vsm_dataset.ipynb
+++ b/notebooks/vsm_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,25 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_just_generated = \"/home/shuaman/video_sm/video_summarization/src/eccv16_dataset_summe_google_pool5.h5\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_data_preprocessd = \"/data/shuaman/video_summarization/datasets/object_features/eccv16_dataset_summe_google_pool5.h5\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +77,7 @@
     "        \"/home/shuaman/video_sm/video_summarization/src/eccv16_dataset_summe_google_pool5.h5\",\n",
     "        \"/home/shuaman/video_sm/video_summarization/src/eccv16_dataset_tvsum_google_pool5.h5\",\n",
     "        \"/home/shuaman/video_sm/video_summarization/src/eccv16_dataset_youtube_google_pool5.h5\",\n",
+    "        \"/home/shuaman/video_sm/video_summarization/src/eccv16_dataset_cosum_google_pool5.h5\",\n",
     "        \"/data/shuaman/video_summarization/datasets/object_features/eccv16_dataset_summe_google_pool5.h5\",\n",
     "        \"/data/shuaman/video_summarization/datasets/object_features/eccv16_dataset_tvsum_google_pool5.h5\",\n",
     "        \"/data/shuaman/video_summarization/datasets/dsnet/datasets/eccv16_dataset_ovp_google_pool5.h5\",\n",
@@ -105,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -116,6 +99,7 @@
       "done /home/shuaman/video_sm/video_summarization/src/eccv16_dataset_summe_google_pool5.h5\n",
       "done /home/shuaman/video_sm/video_summarization/src/eccv16_dataset_tvsum_google_pool5.h5\n",
       "done /home/shuaman/video_sm/video_summarization/src/eccv16_dataset_youtube_google_pool5.h5\n",
+      "done /home/shuaman/video_sm/video_summarization/src/eccv16_dataset_cosum_google_pool5.h5\n",
       "done /data/shuaman/video_summarization/datasets/object_features/eccv16_dataset_summe_google_pool5.h5\n",
       "done /data/shuaman/video_summarization/datasets/object_features/eccv16_dataset_tvsum_google_pool5.h5\n",
       "done /data/shuaman/video_summarization/datasets/dsnet/datasets/eccv16_dataset_ovp_google_pool5.h5\n",
@@ -142,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +249,7 @@
        "          10500, 10515]])}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
