--- a/notebooks/tvsum.ipynb
+++ b/notebooks/tvsum.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "48\n"
+      "51\n"
      ]
     }
    ],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "(1000, 3)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "4  AwmHb44_ouw       VT  2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,..."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "(50, 5)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "4  https://www.youtube.com/watch?v=XzYM3PfTM4w   1:51  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "        0.        ]], dtype=float32)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "        0.11274412]], dtype=float32)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "       0.075 , 0.075 , 0.075 ], dtype=float32)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
        "       0.2 , 0.2 , 0.2 ], dtype=float32)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
        "       [1., 1., 1., ..., 0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
        "       [1., 1., 1., ..., 0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,6 +1033,55 @@
    "source": [
     "print(\"user summary mine\", video_mine['user_summary'][...].shape)\n",
     "video_mine['user_summary'][...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "video_mine['user_summary'][...][0][10596]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xd = [5,10,12,15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  5, 10, 12, 15, 20])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack((0, xd, 20))"
    ]
   },
   {
